# dotfiles

./: .aider.chat.history.md  .aider.input.history  .cursorrules  .editorconfig  .env.example  .envrc  .gitignore  .gitmodules  .mcp.json  .profile  .shellcheckrc  .sops.yaml  .windsurfrules  AGENTS.md  Brewfile  Brewfile.core  Brewfile.feb.1  Brewfile.full  Brewfile.jan.31  CITATIONS.md  CLAUDE.md  ChatGPT-TS Type System Guide (1).md  GEMINI.md  HOMELAB.md  Justfile  LICENSE  PRD.md  README.md  SPECIFICATIONS.yml  STACK.md  STYLE_GUIDE.md  TODO.md  VERSIONS.md  address-change-todos-cleaned-up.md  apple-reset-prev-chatgpt-convo.txt  archive.setup.sh  bootstrap.zsh  claude-README.md  commitlint.config.js  core.Brewfile  (+36 more)
.codex/: config.toml
domains/health/: .dvcignore  .ls-lint.yml  README.md  justfile  pyproject.toml  requirements-dev.txt  requirements.txt  run_analysis.py
domains/health/.dvc/: config
domains/health/.githooks/: post-checkout  post-merge  pre-commit
domains/health/.github/workflows/: ci.yml
domains/health/config/: benchmarks.yaml  individuals.yaml  pipeline.yaml
domains/health/data/: .gitignore  23andme-dna-account-data-export-dec-1-2025.dvc  WHOOP.dvc  medical-records.dvc
domains/health/docs/: SPEC.md
domains/health/pipeline/: __init__.py  analyze.py  comprehensive_report.py  config.py  consolidate.py  context.py  extract.py  logging_config.py  main.py  schema.py  weekly.py
domains/health/snapshots/20251125_e9092910/: context_for_next.json  health_profiles.json  manifest.json  report.md
domains/health/snapshots/20251129_f33dd31f/: context_for_next.json  health_profiles.json  manifest.json
domains/health/snapshots/20251130_1b616368/: context_for_next.json  health_profiles.json  manifest.json
domains/health/snapshots/20251209_8fe55539/: manifest.json
domains/health/tests/: __init__.py  conftest.py
domains/health/tests/e2e/: __init__.py  test_pipeline.py
scripts/: .envrc  .gitignore  CLAUDE.md  DEVSHELL_WORKFLOW.md  GOOGLE_CREDENTIALS_SETUP.md  GOOGLE_DOCS_LITE.md  README.md  all-in-one.zsh  ant-up-platform.csv  ant.zsh  arc-bookmarks-may-28-2025.txt  arc-bookmarks.html  arc-bookmarks.py  check-duplicate-backups.sh  clean-markdown-images.sh  clean-symlinks.sh  cleaned_merged.csv  csv-merge-cleaner-script.py  dedup.lua  disk-audit.sh  family-audio-processing.py  fix-nix-direnv.sh  fix-platform-nix.sh  flake-fixed.nix  flake.nix  functions.zsh  gdrive-health-check.sh  gen-rules.ts  google-docs-curl.sh  google-docs-lite.py  google-docs-urls.txt  google-docs.py  health-monitor.sh  inputs.txt  install.sh  j  mac-apps-export.zsh  macos-defaults.sh  macos-nix-cleanup.sh  macos-nix-install.sh  (+42 more)
scripts/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
scripts/.direnv/flake-inputs/: cd7fkv2r1nflz758r8bsnqfvkq7f72wj-source  qav1jhlw9wfb0aixn8213nhjwa2av2pl-source
scripts/anterior/: justfile
scripts/bookmarks/: arc-bookmarks-feb-25-2025.txt  arc-bookmarks-url-converter-to-firefox-zen-browser.py
scripts/install/: brew.sh  macos.sh
scripts/tests/: test_main.py
scripts/utils/: helpers.sh
(+3223 files in other folders)
